# prosodiff

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: prosodiff-card.json
scripts/: render_social_preview.py
src/prosodiff/: __init__.py  __main__.py  analysis.py  cli.py  demo.py  errors.py  models.py  render.py  report.py  web.py
src/prosodiff/static/: app.css  app.js
src/prosodiff/templates/: base.html  index.html  result.html
tests/: conftest.py  test_analysis.py  test_cli.py  test_render.py  test_web.py
